# UIReplicationBenchMark

./: .gitignore  Dockerfile  README.md  image_sources.py  main.py  pyproject.toml  visualize_cli.py
harnesses/opencode/: opencode.json  run_opencode_task.py
image_collection_utilities/: screenshot.py
tests/: test_image_sources.py  test_main.py  test_run_opencode_task.py  test_screenshot.py  test_visualize_results.py
visualize/: scoring.py  visualize_results.py
visualize/frontend/: index.html  package.json  vite.config.js
visualize/frontend/src/: main.js  styles.css
