[project]
name = "ui-replication-benchmark"
version = "0.1.0"
description = "Benchmark harness for generating and scoring UI replication runs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lpips>=0.1.4",
    "numpy",
    "pillow",
]

[project.optional-dependencies]
harness = [
    "playwright>=1.59.0",
]
