[project]
name = "ui-replication-benchmark"
version = "0.1.0"
description = "Benchmark harness for generating and scoring UI replication runs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lpips>=0.1.4",
    "numpy",
    "pillow",
    "pydantic-ai-slim[openrouter]>=1.90.0",
]

[project.scripts]
visualize = "visualize.visualize_results:main"

[project.optional-dependencies]
harness = [
    "playwright>=1.59.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.hatch.build.targets.wheel]
packages = ["visualize", "harnesses", "image_collection_utilities"]
